# gmmproc5

./: .dir-locals.el  .gitignore  AUTHORS  ChangeLog  MILESTONES  Makefile.am  README  autogen.sh  configure.ac  data.xml
ext/: ext.am
ext/kr/: kr-old.hh  krtest.cc
gmmproc/: gmmproc.am
gmmproc/dumper/: dumper.am
gmmproc/gir/: gir.am  xml.hh
gmmproc/gir/names/: main.cc  names.am  names.txt
gmmproc/gir/tools/: tools.am
gmmproc/gir/tools/lame-schema-gen/: base-node-data.cc  base-node-data.hh  gir-paths.cc  gir-paths.hh  lame-schema-gen.am  main.cc  names.cc  names.hh  node-common.cc  node-common.hh  schema-data.cc  schema-data.hh  schema-doc.cc  schema-doc.hh  short.cc  short.hh  types.cc  types.hh  utils.hh
gmmproc/gir/tools/names-gen/: main.cc  names-gen.am
gmmproc/main/: checker.cc  checker.hh  main.am  main.cc
gmmproc/test/: test.am  test.cc  test.hh  test2.cc  test4.cc  test5.cc  testxml.cc
gmmproc/utils/: exceptions.hh  integral-types.hh  iterator-wrapper.hh  iterator.hh  lambda-wrapper.hh  range.hh  str.hh  type-to-type.hh  utils.hh  view.hh  wrapper.hh
gmmproc/xml/: api  extra.hh  structured  walkerfwd.hh  xml-impl-helpers.hh  xml-libxml.hh  xml-pugi.hh  xml-pugi2-epilog.hh  xml-pugi2-prolog.hh  xml-pugi2.hh  xml.am  xml.hh  xml2.hh  xmlfwd.hh
gmmproc/xml/impls/: xml-pugi-epilog.hh  xml-pugi-prolog.hh
gmmproc/xml/old-crap/: xml-impl-helpers.hh  xml-libxml.hh  xml-pugi.hh
gmmproc/xml/relax/: syntax.hh
gmmproc/xml/structured/: attribute.hh  child.hh  generic-child.cc  node.hh
gmmproc/xml/structured-hana/: api.hh  apicall.hh  basic.hh  child.hh  extra-data-part.hh  generators.hh  generic-attr.cc  generic-child.hh  getters.hh  group.hh  hana-storage.hh  node.hh  part.hh  registry.hh  structured.hh  value.hh
gmmproc/xml/structured-hana/design/: api  code2.hh  design  ideas  paramnames  proto
gmmproc/xml/structured-hana/detail/: child.hh  container.hh  extra-data-part.hh  generate.hh  getters.hh  group.hh  hana-storage.hh  initializer.hh  mpl.hh  node.hh  part.hh  parts-info.hh  storage.hh  type-helpers.hh  utils.hh  wrappers.hh
gmmproc/xml/structured-hana/new/: child.hh  generators.hh  node.hh  text.hh
gmmproc/xml/structured-hana/new/detail/: getters.hh  storage.hh
gmmproc/xml/structured-mpl/: exceptions.cc  exceptions.hh  generic-attr.hh  node-base.hh  structured.am
gmmproc/xml/structured-mpl/new/: attribute.hh  node.hh
gmmproc/xml/structured-mpl/new/detail/: mpl-boostify.hh  mpl.hh  (+3 more)
gmmproc/xml/structured-mpl/new2/: child.hh  getters.hh  node.hh
gmmproc/xml/structured-mpl/new3/: child.hh  generators.hh  getters.hh  node.hh  registry.hh  structured.hh
gmmproc/xml/structured/design/: code.hh
gmmproc/xml/structured/detail/: processor-and-getters.hh  storage.hh  type-helpers.hh
gmmproc/xml/structured/new/: attribute.hh  child.hh  getters.hh  registry.hh
gmmproc/xml/structured/new2/: child.hh  child2.hh  node.hh
gmmproc/xml/tests/: basic_parent.cc  insert.cc  misc.hh  node.cc  node.hh  testmain.cc  walker.cc  walker.hh
m4/: ax_cxx_compile_stdcxx.m4
mm/: mm.am
mm/dumper/: dumper.am  main.cc
mm/gir/: gir.am  xml.hh
mm/gir/names/: main.cc  names.am
mm/gir/tools/: tools.am
mm/gir/tools/lame-schema-gen/: base-node-data.hh  gir-paths.hh  lame-schema-gen.am  main.cc  names.hh  node-common.cc  node-common.hh  schema-data.hh  short.cc  short.hh
mm/gir/tools/names-gen/: names-gen.am
mm/main/: inh-helpers.hh  main.am  main.cc  test.cc
mm/test/: test.am
mm/utils/: iterator-wrapper.hh  type-to-type.hh  utils.hh
mm/xml/: xml-libxml.hh  xml-pugi.hh  xml.am
mm/xml/structured/: generic-attr.cc  generic-attr.hh  generic-child.hh  node-base.hh  structured.am
mm/xml/tests/: node.cc
src/: src.am
src/api/: api.am  enum.cc  enum.h  filelist.am  function.cc  function.h  functionbase.cc  functionbase.h  id.cc  id.h  identifiable.h  namespace.cc  namespace.h  object.cc  object.h  param.cc  param.h  property.cc  property.h  signal.cc  signal.h  wrappable.h
src/apiparsers/: apiparsers.am
src/apiparsers/defsparser/: defsparser.am  defsparser.cc  defsparser.h  filelist.am  statement.cc  statement.h  statementizetask.cc  statementizetask.h
src/apiparsers/defsparser/defsprivate/: parserstuff.cc  parserstuff.h  statement.cc  statement.h  statementizetask.cc  statementizetask.h
src/common/: apitemplates.cc  apitemplates.h  common.am  dfsmerror.cc  dfsmerror.h  filelist.am  internalerror.h  simpledfsm.h  stlops.h  utilities.cc
src/ext/: ext.am
src/ext/kr/: kr.hh  krboost.hh  krboosttest.cc  krtest.cc
src/gmmproc/: gmmproc.am  main.cc
src/mm/: mm.am
src/mm/dumper/: dumper.am  main.cc
src/mm/gir/: gir.am  gir.xml  xml.hh
src/mm/gir/names/: names.am
src/mm/gir/tools/: tools.am
src/mm/main/: gen.pl  main.am  main.cc  names.hh  repository.hh
src/mm/test/: test.am  test.cc  test.xml  test2.cc
src/mm/utils/: iterator-wrapper.hh  lambda-wrapper.hh  range.hh  str.hh
src/mm/xml/: code.hh  exceptions.cc  exceptions.hh  generic-attr.cc  generic-attr.hh  generic-child.cc  generic-child.hh  node-base.hh  xml.am  xml.hh
src/mm/xml/base/: base.am  xml-libxml.hh  xml-pugi.hh  xml.hh
src/mm/xml/structured/: exceptions.cc  exceptions.hh  generic-attr.cc  generic-child.cc  generic-child.hh  structured.am
src/mm/xml/tests/: walker.cc
src/old/: src.am
src/old/api/: api.am  enum.cc  function.h  identifiable.cc  identifiable.h  namespace.cc  object.cc  param.cc  ptrtypes.h  wrappable.cc
src/old/apiparsers/: apiparsers.am
src/old/apiparsers/defsparser/: defsparser.h  statement.cc
src/old/common/: common.am  dfsmerror.cc  internalerror.cc  simpledfsm.h  utilities.h
src/old/gmmproc/: gmmproc.am
src/old/parserscommon/: apiparser.cc  apiparser.h  parserscommon.am
src/old/template/: error.cc  template.am  token.cc  token.h  tokenizer.cc  tokenizer.h
src/parsers/: apiparser.h
src/parserscommon/: apiparser.h  parserscommon.am  syntaxerror.cc  syntaxerror.h
src/template/: error.h  template.am  tokenizer.cc
src/templatetokenizer/: templatetokenizer.am  templatetokenizer.cc  templatetokenizer.h
(+48 files in other folders)
